# mini_sim

./: README  README.md
mini_control/: CMakeLists.txt  (+2 more)
mini_description/: CMakeLists.txt  package.xml
mini_description/config/: mini1.0_control.yaml  mini1.5_control.yaml
mini_description/launch/: gazebo.launch  gazebo_mini1.0.launch  gazebo_mini1.5.launch  gmapping_demo.launch  gmapping_demo.launch~  mini.launch  mini1.0.launch  mini1.0.world  mini1.5.launch  rvis_mini1.5.launch  rviz.launch  rviz_mini1.0.launch  view_navigation.launch  view_navigation.launch~
mini_description/launch/includes/: mini1.0.launch.xml  mini1.5.launch.xml
mini_description/launch/rviz/: navigation.rviz
mini_description/meshes/mini1.5/: cc111.ply  cc112.ply  cc113.ply  cc114.ply  cc121.ply  cc122.ply  cc123.ply  cc124.ply  cc125.ply  cc130.ply  cc131.ply  cc133.ply  cc134.ply  cc135.ply  cc136.ply  cc138.ply  cc140.ply  cc145.ply  cc149.ply  cc63.ply  cc64.ply  cc69.ply  cc81.ply  cc83.ply  cc84.ply  cc85.ply  cc86.ply  cc87.ply  cc88.ply  cc91.ply  cc97.ply  cc98.ply  hand_butom_right_horn2.ply  hand_buttom_left_horn2.ply  hand_cover.ply  hand_left_finger_top.ply  hand_left_upper_finger1.ply  hand_left_upper_finger2.ply  hand_motor.ply  hand_motor_horn.ply  (+20 more)
mini_description/urdf/mini1.0/: arm_upper.urdf.xacro  base.urdf.xacro  finger_left.urdf.xacro  finger_right.urdf.xacro  head.urdf.xacro  hokuyo_utm30lx.urdf.xacro  lidar.urdf.xacro  mini1.0.urdf.xacro  mini1.0_gazebo.urdf.xacro  mini1.0_standalone.urdf.xacro  torso_lower.urdf.xacro  torso_upper.urdf.xacro  wrist_pitch.urdf.xacro
(+61 files in other folders)
